# linkedin-spider

./: .dockerignore  .editorconfig  .env.example  .gitIgnore  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.stdio  LICENSE  Makefile  README.md  csp_bypass.py  docker-compose.yml  driver_manager.py  main.py  profile_scraper.py  pyproject.toml  raw.html  search_scraper.py
.github/: changelog_config.json
.github/workflows/: release.yml
cli/: __main__.py  main.py
docs/learnings/: logging.md
docs/plans/: 2026-03-11-structured-logging-design.md
docs/plans/mcp-e2e-tests/: phase-1.md  phase-2.md  plan.md
docs/plans/structured-logging/: REVIEW.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  plan.md
examples/: basic_usage.py  company_scraper.py  connections_scraper.py  conversations_scraper.py  profile_scraper.py  profile_search.py  search_posts_example.py
linkedin_mcp/: __init__.py  __main__.py  authentication.py  config.json  config.py  human_behavior.py  linkedin_scraper.py  main.py  profile_scraper.py  server.py  server_proxy.py  server_sse.py  tracking_handler.py
linkedin_mcp/cli/: __init__.py  main.py
linkedin_mcp/core/: __init__.py  authentication.py  config.py  driver_manager.py  linkedin_scraper.py  session_manager.py
linkedin_mcp/scrapers/: __init__.py  company_scraper.py  connect_request_scraper.py  connection_scraper.py  conversation_scraper.py  conversations_list_scraper.py  profile_scraper.py  search_filters.py  search_scraper.py
linkedin_mcp/server/: __init__.py  server.py
linkedin_mcp/utils/: __init__.py  csp_bypass.py  human_behavior.py  selenium_imports.py  tracking_handler.py
mcp/: __init__.py  __main__.py  server_sse.py  server_stdio.py
src/linkedin_scraper/: README.md  __init__.py
src/linkedin_scraper/cli/: __init__.py  __main__.py  main.py
src/linkedin_scraper/core/: __init__.py  auth.py  driver.py  scraper.py
src/linkedin_scraper/mcp/: server.py
src/linkedin_scraper/scrapers/: __init__.py  base.py  company.py  connections.py  conversations.py  profile.py  search.py
src/linkedin_scraper/utils/: __init__.py  human_behavior.py  tracking.py
src/linkedin_spider/: __init__.py
src/linkedin_spider/cli/: __main__.py  main.py
src/linkedin_spider/core/: __init__.py  auth.py  config.py  driver.py  logging.py  scraper.py
src/linkedin_spider/mcp/: server.py
src/linkedin_spider/scrapers/: __init__.py  base.py  company.py  connections.py  conversations.py  profile.py  search.py  search_filters.py
src/linkedin_spider/utils/: __init__.py  browser.py  human_behavior.py  pattern_detector.py  tracking.py
tests/: conftest.py  test_auth_priority.py  test_cookie_validation.py  test_driver_warmup.py  test_e2e.py  test_logging.py  test_manual_login.py  test_mcp_logging.py  test_mcp_server.py
